setup/ansible/roles/kube-system/ingress/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: nginx-ingress
