setup/ansible/roles/kube-system/ingress/nginx-ingress-controller-rbac.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
